---
source: crates/mabo-parser/tests/parser.rs
description: "/// Basic struct.\nstruct SampleStruct {\n    a: u32 @1,\n    b: bool @2,\n}\n\n/// Sample enum.\nenum SampleEnum {\n    One @1,\n    Two(u32 @1, u64 @2) @2,\n    Three {\n        field1: u32 @1,\n        field2: bool @2,\n    } @3,\n}"
input_file: crates/mabo-parser/tests/inputs/schema_basic.mabo
---
/// Basic struct.
struct SampleStruct {
    a: u32 @1,
    b: bool @2,
}

/// Sample enum.
enum SampleEnum {
    One @1,
    Two(u32 @1, u64 @2) @2,
    Three {
        field1: u32 @1,
        field2: bool @2,
    } @3,
}


